--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 ---
 layout: default
-title: Hank Quinlan, Horrible Cop
+title: Chaoyi Chen
 ---
 
 		<div class="blurb">
-			<h1>Hi there, I'm Hank Quinlan!</h1>
-			<p>I'm best known as the horrible cop from <em>A Touch of Evil</em>. Don't trust me. <a href="/about">Read more about my life...</a></p>
-		</div> 
+			<h1>Hi! I am Chaoyi Chen</h1>
+			<p>Hi! I am Chaoyi Chen. I’m a second-year Ph.D. student in the Department of Linguistics at Rutgers University. 
+				I am interested in Syntax, Semantics, and Syntax-Morphology interface. 
+				Language-wise, I specialize in Mandarin Chinese and Fuzhou Chinese (a prestige variety of the Eastern Min Branch of Min Chinese), both of which are my native languages.<\p>
