--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: Chaoyi Chen(陈超逸)
 			<p>Hi! I am Chaoyi Chen. I’m a second-year Ph.D. student in the Department of Linguistics at Rutgers University.<br>
 			I am interested in Syntax, Semantics, and Syntax-Morphology interface.<br>
 			Language-wise, I specialize in Mandarin Chinese and Fuzhou Chinese (a prestige variety of the Eastern Min Branch of Min Chinese), both of which are my native languages.</p>
-			<\div>	
+		</div>	
 		</br>
 		</br>	
 		<div class="blurb">
