--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ title: Chaoyi Chen(陈超逸)
 		</br>	
 		<div class="blurb">
 			<h2>Recent activities:</h2>
-				<p>2020, April. Two Effects of the Utterance-final Particle hao-bu-hao in Mandarin Chinese. Talk given at NACCL-32. University of Connecticut, Storrs, CT, USA<\p>
+				<p>2020, April. Two Effects of the Utterance-final Particle hao-bu-hao in Mandarin Chinese. Talk given at NACCL-32. University of Connecticut, Storrs, CT, USA</p>
 			</div>
 				
 				
