--- a/Education/index.html
+++ b/Education/index.html
@@ -4,13 +4,22 @@ title: Education
 ---
 
 <div class="Education">
+	
+<div class="row">
+<div class="column">
+	2018.08 – present
+	2016.09 – 2017.01
+	2015.09 – 2018.07
+	2011.09 – 2015.06 
+	</div>
+<div class="column">
+	
+        Ph.D. Student in Linguistics, Rutgers University, New Brunswick, U.S.
+	Visiting Student, National Tsing Hua University, Hsinchu.
+        M.A. in Linguistics and Applied Linguistics, Peking University, Beijing, China.
+        B.A. in English Language and Literature, Nankai University, Tianjin, China.
+	</div>
+</div>
 
-2018.08 – present    Ph.D. Student in Linguistics, Rutgers University, New Brunswick, U.S.
-
-2016.09 – 2017.01    Visiting Student, National Tsing Hua University, Hsinchu.
-
-2015.09 – 2018.07    M.A. in Linguistics and Applied Linguistics, Peking University, Beijing, China.
-
-2011.09 – 2015.06    B.A. in English Language and Literature, Nankai University, Tianjin, China.
 	</div>
 	
