--- a/Presentations/index.html
+++ b/Presentations/index.html
@@ -2,8 +2,15 @@
 layout: default
 title: Presentations
 ---
-<h1>{{ page.title }}</h1>
-<ul class="posts">
+<h2>{{ page.title }}</h2>
+</br>
+		<div class="blurb">
+			2018   Chen, Chaoyi. The (Non-)Occurrence of Localizers in Mandarin Chinese and the Analyticity and Syntheticity in Locative PP. IWSAGP2018. Beijing Language and Culture University, Beijing, China.
+
+2018   Chen, Chaoyi. The (Non-)Occurrence of Localizers in Mandarin Chinese. Semantics Day. Zhejiang University, Hangzhou, China.
+
+2015   Chen, Chaoyi. The Reduplication in Fuzhou Chinese. Conference presentation at the Annual Conference of the Tianjin Association of Linguistics. Tianjin University of Technology, Tianjin, China.
+		</div>	
 
  
     
