--- a/Education/index.html
+++ b/Education/index.html
@@ -4,7 +4,9 @@ title: Education
 ---
 
 </br>
-<div class="Education">
+<h2>{{ page.title }}</h2>
+</br>
+<div class="blurb">
 	
 <div class="row">
 <div class="column">
