--- a/Education/index.html
+++ b/Education/index.html
@@ -9,17 +9,22 @@ title: Education
 <div class="blurb">
 	
 
-<div class="column">
-	2018.08 – present
-	2016.09 – 2017.01
-	2015.09 – 2018.07
-	2011.09 – 2015.06 
+      <div class="blue">
+	2018.08 – present <br>
+	2016.09 – 2017.01 <br>
+	2015.09 – 2018.07 <br>
+	2011.09 – 2015.06 <br>
 	</div>
-<div class="column">
+      <div class="red"></div>
+        Ph.D. Student in Linguistics, Rutgers University, New Brunswick, U.S.<br>
+	Visiting Student, National Tsing Hua University, Hsinchu.<br>
+        M.A. in Linguistics and Applied Linguistics, Peking University, Beijing, China.<br>
+        B.A. in English Language and Literature, Nankai University, Tianjin, China.<br>
+	</div>
+
+	 
+	</div>
+
 	
-        Ph.D. Student in Linguistics, Rutgers University, New Brunswick, U.S.
-	Visiting Student, National Tsing Hua University, Hsinchu.
-        M.A. in Linguistics and Applied Linguistics, Peking University, Beijing, China.
-        B.A. in English Language and Literature, Nankai University, Tianjin, China.
-	</div>
+        
 	
