--- a/Education/index.html
+++ b/Education/index.html
@@ -15,7 +15,7 @@ title: Education
 	2015.09 – 2018.07 <br>
 	2011.09 – 2015.06 <br>
 	</div>
-      <div class="red"></div>
+      <div class="red">
         Ph.D. Student in Linguistics, Rutgers University, New Brunswick, U.S.<br>
 	Visiting Student, National Tsing Hua University, Hsinchu.<br>
         M.A. in Linguistics and Applied Linguistics, Peking University, Beijing, China.<br>
