--- a/Education/index.html
+++ b/Education/index.html
@@ -8,7 +8,8 @@ title: Education
 </br>
 <div class="blurb">
 	
-
+<head></head>
+    <body>
       <div class="blue">
 	2018.08 – present <br>
 	2016.09 – 2017.01 <br>
@@ -21,7 +22,7 @@ title: Education
         M.A. in Linguistics and Applied Linguistics, Peking University, Beijing, China.<br>
         B.A. in English Language and Literature, Nankai University, Tianjin, China.<br>
 	</div>
-
+ <body>
 	 
 	</div>
 
