--- a/Presentations/index.html
+++ b/Presentations/index.html
@@ -7,13 +7,7 @@ title: Presentations
 <h2>{{ page.title }}</h2>
 </br>
 		<div class="blurb">
-			2018   Chen, Chaoyi. The (Non-)Occurrence of Localizers in Mandarin Chinese and the Analyticity and Syntheticity in Locative PP. IWSAGP2018. Beijing Language and Culture University, Beijing, China.
-
-2018   Chen, Chaoyi. The (Non-)Occurrence of Localizers in Mandarin Chinese. Semantics Day. Zhejiang University, Hangzhou, China.
-
-2015   Chen, Chaoyi. The Reduplication in Fuzhou Chinese. Conference presentation at the Annual Conference of the Tianjin Association of Linguistics. Tianjin University of Technology, Tianjin, China.
+		<p><strong>Chen, Chaoyi.</strong> (2018). he (Non-)Occurrence of Localizers in Mandarin Chinese and the Analyticity and Syntheticity in Locative PP. IWSAGP2018. Beijing Language and Culture University, Beijing, China. <em>
+                <p><strong>Chen, Chaoyi.</strong> (2018). The (Non-)Occurrence of Localizers in Mandarin Chinese. Semantics Day. Zhejiang University, Hangzhou, China.<em>
+                <p>strong>Chen, Chaoyi.</strong> (2015). The Reduplication in Fuzhou Chinese. Conference presentation at the Annual Conference of the Tianjin Association of Linguistics. Tianjin University of Technology, Tianjin, China.<em>
 		</div>	
-
- 
-    
-</ul>
