--- a/Presentations/index.html
+++ b/Presentations/index.html
@@ -6,8 +6,13 @@ title: Presentations
 </br>
 <h2>{{ page.title }}</h2>
 </br>
-		<div class="blurb">
-		<p><strong>Chen, Chaoyi.</strong> (2018). he (Non-)Occurrence of Localizers in Mandarin Chinese and the Analyticity and Syntheticity in Locative PP. IWSAGP2018. Beijing Language and Culture University, Beijing, China. <em>
-                <p><strong>Chen, Chaoyi.</strong> (2018). The (Non-)Occurrence of Localizers in Mandarin Chinese. Semantics Day. Zhejiang University, Hangzhou, China.<em>
-                <p>strong>Chen, Chaoyi.</strong> (2015). The Reduplication in Fuzhou Chinese. Conference presentation at the Annual Conference of the Tianjin Association of Linguistics. Tianjin University of Technology, Tianjin, China.<em>
-		</div>	
+                   <div class="blue">
+                    <strong>Chen, Chaoyi.</strong> (2018).<br>
+	            <strong>Chen, Chaoyi.</strong> (2018).<br>
+		     <strong>Chen, Chaoyi.</strong> (2015).<br>
+		     </div>
+                    <div class="blue">
+		 The (Non-)Occurrence of Localizers in Mandarin Chinese and the Analyticity and Syntheticity in Locative PP. IWSAGP2018. Beijing Language and Culture University, Beijing, China. <em>
+                The (Non-)Occurrence of Localizers in Mandarin Chinese. Semantics Day. Zhejiang University, Hangzhou, China.<em>
+                The Reduplication in Fuzhou Chinese. Conference presentation at the Annual Conference of the Tianjin Association of Linguistics. Tianjin University of Technology, Tianjin, China.<em>
+		 </div>
