--- a/Presentations/index.html
+++ b/Presentations/index.html
@@ -7,9 +7,9 @@ title: Presentations
 <h2>{{ page.title }}</h2>
 </br>
                    <div class="blue">
-                    <strong>Chen, Chaoyi.</strong> (2018).<br>
-	            <strong>Chen, Chaoyi.</strong> (2018).<br>
-		     <strong>Chen, Chaoyi.</strong> (2015).<br>
+                    <strong>Chen, Chaoyi</strong> (2018).<br>
+	            <strong>Chen, Chaoyi</strong> (2018).<br>
+		     <strong>Chen, Chaoyi</strong> (2015).<br>
 		     </div>
                     <div class="blue">
 		 The (Non-)Occurrence of Localizers in Mandarin Chinese and the Analyticity and Syntheticity in Locative PP. IWSAGP2018. Beijing Language and Culture University, Beijing, China. <em>
