--- a/Presentations/index.html
+++ b/Presentations/index.html
@@ -12,7 +12,7 @@ title: Presentations
 		     <strong>Chen, Chaoyi</strong> (2015).<br>
 		     </div>
                     <div class="blue">
-		 The (Non-)Occurrence of Localizers in Mandarin Chinese and the Analyticity and Syntheticity in Locative PP. IWSAGP2018. Beijing Language and Culture University, Beijing, China. <em>
-                The (Non-)Occurrence of Localizers in Mandarin Chinese. Semantics Day. Zhejiang University, Hangzhou, China.<em>
-                The Reduplication in Fuzhou Chinese. Conference presentation at the Annual Conference of the Tianjin Association of Linguistics. Tianjin University of Technology, Tianjin, China.<em>
+		 The (Non-)Occurrence of Localizers in Mandarin Chinese and the Analyticity and Syntheticity in Locative PP. IWSAGP2018. Beijing Language and Culture University, Beijing, China. <br>
+                The (Non-)Occurrence of Localizers in Mandarin Chinese. Semantics Day. Zhejiang University, Hangzhou, China.<br>
+                The Reduplication in Fuzhou Chinese. Conference presentation at the Annual Conference of the Tianjin Association of Linguistics. Tianjin University of Technology, Tianjin, China.<br>
 		 </div>
