--- a/Education/index.html
+++ b/Education/index.html
@@ -11,10 +11,10 @@ title: Education
 <head></head>
     <body>
       <div class="blue">
-	<b>2018.08&nbsp–&nbsppresent<\b><br>
-	<b>2016.09&nbsp–&nbsp2017.01<\b><br>
-	<b>2015.09&nbsp–&nbsp2018.07<\b><br>
-	<b>2011.09&nbsp–&nbsp2015.06<\b><br>
+	<b>2018.08&nbsp–&nbsppresent</b><br>
+	<b>2016.09&nbsp–&nbsp2017.01</b><br>
+	<b>2015.09&nbsp–&nbsp2018.07</b><br>
+	<b>2011.09&nbsp–&nbsp2015.06</b><br>
 	</div>
       <div class="red">
         Ph.D. Student in Linguistics, Rutgers University, New Brunswick, U.S.<br>
