--- a/Presentations/index.html
+++ b/Presentations/index.html
@@ -6,13 +6,21 @@ title: Presentations
 </br>
 <h2>{{ page.title }}</h2>
 </br>
-                   <div class="blue">
-                    <strong>Chen, Chaoyi</strong> (2018).<br>
-	            <strong>Chen, Chaoyi</strong> (2018).<br>
-		     <strong>Chen, Chaoyi</strong> (2015).<br>
-		     </div>
-                    <div class="red">
-		 The (Non-)Occurrence of Localizers in Mandarin Chinese and the Analyticity and Syntheticity in Locative PP. IWSAGP2018. Beijing Language and Culture University, Beijing, China. <br>
-                The (Non-)Occurrence of Localizers in Mandarin Chinese. Semantics Day. Zhejiang University, Hangzhou, China.<br>
-                The Reduplication in Fuzhou Chinese. Conference presentation at the Annual Conference of the Tianjin Association of Linguistics. Tianjin University of Technology, Tianjin, China.<br>
-		 </div>
+<table>
+<tr>
+  <td><b>Chen, Chaoyi<\b></td>
+  <td><b>Chen, Chaoyi<\b></td>
+  <td><b>Chen, Chaoyi<\b></td>
+</tr>
+<tr>
+  <td>2018</td>
+  <td>2018</td>
+  <td>2018</td>
+</tr>			   
+<tr>
+  <td>The (Non-)Occurrence of Localizers in Mandarin Chinese and the Analyticity and Syntheticity in Locative PP. IWSAGP2018. Beijing Language and Culture University, Beijing, China.</td>
+  <td>The (Non-)Occurrence of Localizers in Mandarin Chinese. Semantics Day. Zhejiang University, Hangzhou, China.</td>
+  <td>The Reduplication in Fuzhou Chinese. Conference presentation at the Annual Conference of the Tianjin Association of Linguistics. Tianjin University of Technology, Tianjin, China.</td>
+</tr>
+</table>
+               
