--- a/Contact me/index.html
+++ b/Contact me/index.html
@@ -4,11 +4,11 @@ title: Contact me
 ---
  </br>
 		<div class="blurb">
-			<h2>Email</h2><br>
+			<h2>Email</h2>
 			<span class="obfuscate">chaoyi.chen@rutgers.edu/chaoyichenling@outlook.com</span>
 			<\div>
 				
-				<h1>Hank Quinlan</h1>
+				<h2>Chaoyi Chen</h2>
 					<address>
 					<strong>Department of Linguistics<br>
 						Rutgers University</strong><br>
