--- a/Contact me/index.html
+++ b/Contact me/index.html
@@ -6,7 +6,7 @@ title: Contact me
 		<div class="blurb">
 			<h2>Email</h2>
 			<span class="obfuscate">chaoyi.chen@rutgers.edu/chaoyichenling@outlook.com</span>
-			<\div>
+			</div>
 				
 				<h2>Chaoyi Chen</h2>
 					<address>
