--- a/Presentations/index.html
+++ b/Presentations/index.html
@@ -10,7 +10,7 @@ title: Presentations
 <tr>
   <td><b>Chen, Chaoyi</b></td>
   <td><b>2018</b></td>
-  <td><b>The (Non-)Occurrence of Localizers in Mandarin Chinese and the Analyticity and Syntheticity in Locative PP. IWSAGP2018. Beijing Language and Culture University, Beijing, China.</b></td>
+  <td>The (Non-)Occurrence of Localizers in Mandarin Chinese and the Analyticity and Syntheticity in Locative PP. IWSAGP2018. Beijing Language and Culture University, Beijing, China.</b></td>
 </tr>
 <tr>
   <td><b>Chen, Chaoyi</b></td>
