--- a/Contact me/index.html
+++ b/Contact me/index.html
@@ -7,8 +7,9 @@ title: Contact me
 			<h2>Email</h2>
 			<span class="obfuscate">chaoyi.chen@rutgers.edu/chaoyichenling@outlook.com</span>
 			</div>
-				
-				<h2>Chaoyi Chen</h2>
+</br>
+				<h2>Address</h2>
+				        <p><b>Chaoyi Chen</b></p>
 					<address>
 					<strong>Department of Linguistics<br>
 						Rutgers University</strong><br>
