--- a/Contact me/index.html
+++ b/Contact me/index.html
@@ -9,9 +9,10 @@ title: Contact me
 			</div>
 </br>
 				<h2>Address</h2>
-				        <p><b>Chaoyi Chen</b></p>
+				        
 					<address>
-					<strong>Department of Linguistics<br>
+					<strong>Chaoyi Chen<br>
+						Department of Linguistics<br>
 						Rutgers University</strong><br>
 					18 Seminary Place<br>
 					New Brunswick NJ 08901-1184<br>
