--- a/Contact me/index.html
+++ b/Contact me/index.html
@@ -8,8 +8,8 @@ title: Contact me
 			<span class="obfuscate">chaoyi.chen@rutgers.edu/chaoyichenling@outlook.com</span>
 			</div>
 </br>
-				<h2>Address</h2><br>
-				        
+				<h2>Address</h2>
+				        </br>
 					<address>
 					<strong>Chaoyi Chen<br>
 						Department of Linguistics<br>
