--- a/Contact me/index.html
+++ b/Contact me/index.html
@@ -11,8 +11,8 @@ title: Contact me
 				<h2>Address</h2>
 				        </br>
 					<address>
-					<strong>Chaoyi Chen, Department of Linguistics<br>
-						Rutgers University</strong><br>
+					<strong>Chaoyi Chen<br> 
+						Department of Linguistics, Rutgers University</strong><br>
 					18 Seminary Place<br>
 					New Brunswick NJ 08901-1184<br>
 					
