--- a/Presentations/index.html
+++ b/Presentations/index.html
@@ -8,17 +8,17 @@ title: Presentations
 </br>
 <table>
 <tr>
-  <td><b>Chen, Chaoyi</b></td>
+  <td,width="20%"><b>Chen, Chaoyi</b></td>
   <td><b>2018</b></td>
   <td>The (Non-)Occurrence of Localizers in Mandarin Chinese and the Analyticity and Syntheticity in Locative PP. IWSAGP2018. Beijing Language and Culture University, Beijing, China.</b></td>
 </tr>
 <tr>
-  <td><b>Chen, Chaoyi</b></td>
+  <td,width="20%"><b>Chen, Chaoyi</b></td>
   <td><b>2018</b></td>
   <td>The (Non-)Occurrence of Localizers in Mandarin Chinese. Semantics Day. Zhejiang University, Hangzhou, China.</td>
 </tr>			   
 <tr>
-  <td><b>Chen, Chaoyi</b></td>
+  <td,width="20%"><b>Chen, Chaoyi</b></td>
   <td><b>2015</b></td>
   <td>The Reduplication in Fuzhou Chinese. Conference presentation at the Annual Conference of the Tianjin Association of Linguistics. Tianjin University of Technology, Tianjin, China.</td>
 </tr>
