--- a/Presentations/index.html
+++ b/Presentations/index.html
@@ -6,20 +6,20 @@ title: Presentations
 </br>
 <h2>{{ page.title }}</h2>
 </br>
-<table>
+<table >
 <tr>
-  <td,width="20%"><b>Chen, Chaoyi</b></td>
-  <td><b>2018</b></td>
+  <td><b>Chen, Chaoyi</b></td>
+  <td><b>2018&nbsp</b></td>
   <td>The (Non-)Occurrence of Localizers in Mandarin Chinese and the Analyticity and Syntheticity in Locative PP. IWSAGP2018. Beijing Language and Culture University, Beijing, China.</b></td>
 </tr>
 <tr>
-  <td,width="20%"><b>Chen, Chaoyi</b></td>
-  <td><b>2018</b></td>
+  <td><b>Chen, Chaoyi</b></td>
+  <td><b>2018&nbsp</b></td>
   <td>The (Non-)Occurrence of Localizers in Mandarin Chinese. Semantics Day. Zhejiang University, Hangzhou, China.</td>
 </tr>			   
 <tr>
-  <td,width="20%"><b>Chen, Chaoyi</b></td>
-  <td><b>2015</b></td>
+  <td><b>Chen, Chaoyi</b></td>
+  <td><b>2015&nbsp</b></td>
   <td>The Reduplication in Fuzhou Chinese. Conference presentation at the Annual Conference of the Tianjin Association of Linguistics. Tianjin University of Technology, Tianjin, China.</td>
 </tr>
 </table>
