--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Chaoyi Chen (陈超逸)
                 </br>
 		<div class="blurb">
 			<h2>Hi! I am Chaoyi Chen!</h2><br>
-			<p>I’m a second-year Ph.D. student in the Department of Linguistics at Rutgers University.<br>
+			<p>I’m a second-year Ph.D. student <a href="https://ling.rutgers.edu/">in the Department of Linguistics at Rutgers University</a>.<br>
 			I am interested in Syntax, Semantics, and Syntax-Morphology interface.<br>
 			Language-wise, I specialize in Mandarin Chinese and Fuzhou Chinese (a prestige variety of the Eastern Min Branch of Min Chinese), both of which are my native languages.</p>
 		</div>	
