--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ title: Chaoyi Chen (陈超逸)
 		<div class="blurb">
 			<h2>Recent activities:</h2>			
 			<p>2020, April. <i>Two Effects of the Utterance-final Particle hao-bu-hao in Mandarin Chinese</i>. Talk given at NACCL-32. University of Connecticut, Storrs, CT, USA</p>
-                        <p>2020, April. <i>Presupposition licenses limited ellipsis: evidence from the nonverbal wh-question in Mandarin</i>. Talk given at CLS-56. University of Chicago, Chicago, IL, USA</p>			
+                        <p>2020, April. <i>Presupposition licenses limited ellipsis: evidence from the nonverbal wh-question in Mandarin</i>. Talk given at CLS-56. The University of Chicago, Chicago, IL, USA</p>			
 </div>
 				
 				
