--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@ title: Chaoyi Chen (陈超逸)
 			<h2>Hi! I am Chaoyi Chen!</h2><br>
 			<p>I’m a second-year Ph.D. student in the <a href="https://ling.rutgers.edu/">Rutgers Department of Linguistics</a>.<br>
 			I am interested in Syntax, Semantics, and Syntax-Morphology interface.<br>
-			Language-wise, I specialize in Mandarin Chinese and Fuzhou Chinese (a prestige variety of the Eastern Min Branch of Min Chinese), both of which are my native languages.</p>
+			Language-wise, I specialize in Mandarin Chinese and Fuzhou Chinese (a prestige variety of the Eastern Min Branch of Min Chinese), both of which are my native languages.<br>
+			I am working with <a href="https://yimeixiang.wordpress.com/">Dr.Yimei Xiang on first qualifying paper about the concessive reading of scalar particles.</a></p>
 		</div>	
 		</br>
 		</br>	
