--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@ title: Chaoyi Chen (陈超逸)
                 </br>
 		<div class="blurb">
 			<h2>Hi! I am Chaoyi Chen!</h2><br>
-			<p>I’m a second-year Ph.D. student in the <a href="https://ling.rutgers.edu/">Rutgers Department of Linguistics</a>.<br>
+			<p>I’m a rising third-year Ph.D. student in the <a href="https://ling.rutgers.edu/">Rutgers Department of Linguistics</a>.<br>
 			I am interested in Syntax, Semantics, and Syntax-Morphology interface. <br>
 			Language-wise, I specialize in Mandarin Chinese and Fuzhou Chinese (a prestige variety of the Eastern Min Branch of Min Chinese).<br>
-			I am working with <a href="https://yimeixiang.wordpress.com/">Dr.Yimei Xiang</a> on my first qualifying paper about the concessive reading of scalar particles.</p>
+			In July, I finished my first qualifying paper on the concessive reading of scalar particles. Please email me for a copy.</p>
 		</div>	
 		</br>
 		</br>	
 		<div class="blurb">
 			<h2>Recent activities:</h2>				
-			<p>2020, Cancelled. <i>Presupposition licenses limited ellipsis: evidence from the nonverbal wh-question in Mandarin</i>. Talk at CLS-56. The University of Chicago.</p>
+			<p>2020, Online repository. <i>Presupposition licenses limited ellipsis: evidence from the nonverbal wh-question in Mandarin</i>. Talk at CLS-56. The University of Chicago.</p>
 			<p>2020, September. <i>Two Effects of the Utterance-final Particle hao-bu-hao in Mandarin Chinese</i>. Talk at NACCL-32. University of Connecticut.</p>
 </div>
 				
