--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: Chaoyi Chen (陈超逸)
 			<h2>Hi! I am Chaoyi Chen!</h2><br>
 			<p>I’m a rising third-year Ph.D. student in the <a href="https://ling.rutgers.edu/">Rutgers Department of Linguistics</a>.<br>
 			I am interested in Syntax, Semantics, and Syntax-Morphology interface. <br>
-			Language-wise, I specialize in Mandarin Chinese and <a href="https://en.wikipedia.org/wiki/Fuzhou_dialect">Fuzhou Chinese </a>a prestige variety of the Eastern Min Branch of Min Chinese).<br>
+			Language-wise, I specialize in Mandarin Chinese and <a href="https://en.wikipedia.org/wiki/Fuzhou_dialect">Fuzhou Chinese </a>(a prestige variety of the Eastern Min Branch of Min Chinese).<br>
 			In July, I finished my first qualifying paper on the concessive reading of scalar particles (English <i>still</i> and Mandarin <i>hai</i>). Please email me for a copy.</p>
 		</div>	
 		</br>
