--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ title: Chaoyi Chen (陈超逸)
 		<div class="blurb">
 			<h2>Recent activities:</h2>				
 			<p>2020, <a href="http://chicagolinguisticsociety.org/public/CLS56-Digital-Repository.pdf">Online repository</a>. <i>Presupposition licenses limited ellipsis: evidence from the nonverbal wh-question in Mandarin</i>. Talk at CLS-56. The University of Chicago.</p>
-			<p>2020, September. <i>Two Effects of the Utterance-final Particle hao-bu-hao in Mandarin Chinese</i>. Talk at NACCL-32. University of Connecticut.</p>
+			<p>2020, September. <i>Two Effects of the Utterance-final Particle hao-bu-hao in Mandarin Chinese</i>. Talk at NACCL-32. University of Connecticut.[virtual]</p>
 </div>
 				
 				
