--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@ title: Chaoyi Chen (陈超逸)
 		</br>	
 		<div class="blurb">
 			<h2>Recent activities:</h2>				
-			<p>2020, <a href="http://chicagolinguisticsociety.org/public/CLS56-Program_Sep29_v2.pdf">Online repository</a>. <i>Presupposition licenses limited ellipsis: evidence from the nonverbal wh-question in Mandarin</i>. Talk at CLS-56. The University of Chicago.</p>
-			<p>2020, September. <i>Two Effects of the Utterance-final Particle hao-bu-hao in Mandarin Chinese</i>. Talk at NACCL-32. University of Connecticut.[virtual]</p>
+			<p>2021, August. The unexpectedness of concessive scalar particles: a mirativity account. Poster at SICOGG-23. </p>
 </div>
 				
 				
