--- a/index.html
+++ b/index.html
@@ -8,13 +8,12 @@ title: Chaoyi Chen (陈超逸)
 			<p>I’m a third-year Ph.D. student in the <a href="https://ling.rutgers.edu/">Rutgers Department of Linguistics</a>.<br>
 			I am interested in Syntax, Semantics, and Syntax-Morphology interface. <br>
 			Language-wise, I specialize in Mandarin Chinese and <a href="https://en.wikipedia.org/wiki/Fuzhou_dialect">Fuzhou Chinese </a>(a prestige variety of the Eastern Min Branch of Min Chinese).<br>
-			In July, I finished my first qualifying paper on the concessive reading of scalar particles (English <i>still</i> and Mandarin <i>hai</i>). Please email me for a copy.</p>
 		</div>	
 		</br>
 		</br>	
 		<div class="blurb">
 			<h2>Recent activities:</h2>				
-			<p>2021, August. The unexpectedness of concessive scalar particles: a mirativity account. Poster at SICOGG-23. </p>
+			<p>2021, August. The unexpectedness of concessive scalar particles: a mirativity account. Poster presentation at SICOGG-23. </p>
 </div>
 				
 				
