--- a/Teaching/index.html
+++ b/Teaching/index.html
@@ -11,16 +11,14 @@ title: Education
 <head></head>
     <body>
       <div class="blue">
-	<b>2018.08&nbsp–&nbsppresent</b><br>
-	<b>2016.09&nbsp–&nbsp2017.01</b><br>
-	<b>2015.09&nbsp–&nbsp2018.07</b><br>
-	<b>2011.09&nbsp–&nbsp2015.06</b><br>
+	<b>2021 Fall</b><br>
+	<b>2021 Spring</b><br>
+	<b>2020 Fall</b><br>
 	</div>
       <div class="red">
-        Ph.D. Student in Linguistics, Rutgers University, New Brunswick, U.S.<br>
-	Visiting Student, National Tsing Hua University, Hsinchu.<br>
-        M.A. in Linguistics and Applied Linguistics, Peking University, Beijing, China.<br>
-        B.A. in English Language and Literature, Nankai University, Tianjin, China.<br>
+        Intro to Linguistic Theory (Independent instructor), Rutgers University.<br>
+	Intro to Linguistic Theory (Independent instructor), Rutgers University.<br>
+        Intro to Linguistic Theory (Teaching Assistant), Rutgers University.<br>
 	</div>
  <body>
 	 
