--- a/Teaching/index.html
+++ b/Teaching/index.html
@@ -11,6 +11,7 @@ title: Teaching
 <head></head>
     <body>
       <div class="blue">
+	<b>2022 Fall</b><br>       
 	<b>2022 Summer</b><br> 
 	<b>2022 Spring</b><br>      
 	<b>2021 Fall</b><br>
@@ -18,6 +19,7 @@ title: Teaching
 	<b>2020 Fall</b><br>
 	</div>
       <div class="red">
+	Intro to Linguistic Theory (Teaching Assistant), Rutgers University.<br>      
 	Syntax (Independent instructor), Rutgers University.<br>        
 	Intro to Linguistic Theory (Independent instructor; honors section), Rutgers University.<br>      
         Intro to Linguistic Theory (Independent instructor), Rutgers University.<br>
