--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@ title: Chaoyi Chen (陈超逸)
                 </br>
 		<div class="blurb">
 			<h2>Hi! I am Chaoyi Chen!</h2><br>
-			<p>I’m a fourth-year Ph.D. student in the <a href="https://ling.rutgers.edu/">Rutgers Department of Linguistics</a>.<br>
-			I am interested in Syntax, Semantics, and Syntax-Morphology interface. <br>
-			Language-wise, I specialize in Mandarin Chinese and <a href="https://en.wikipedia.org/wiki/Fuzhou_dialect">Fuzhou Chinese </a>(a prestige variety of the Eastern Min Branch of Min Chinese).<br>
+			<p>I’m an ABD student in the <a href="https://ling.rutgers.edu/">Rutgers Department of Linguistics</a>.<br>
+			I am interested in Syntax, Semantics, and their interfaces. Language-wise, I specialize in English, Mandarin Chinese and <a href="https://en.wikipedia.org/wiki/Fuzhou_dialect">Fuzhou Chinese </a>(a prestige variety of the Eastern Min Branch of Min Chinese).<br>
+		        My dissertation is about the syntax and semantics of free relatives, supervised by <a href="https://sites.rutgers.edu/mark-baker/people/mark-baker/">Mark Baker</a> and <a href="https://yimeixiang.wordpress.com/">Yimei Xiang</a>.
 		</div>	
 		</br>
 		</br>	
