--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ title: Chaoyi Chen (陈超逸)
 		</br>	
 		<div class="blurb">
 			<h2>Recent activities:</h2>				
-			<p>2021, August. The unexpectedness of concessive scalar particles: a mirativity account. Poster presentation at SICOGG-23. </p>
+			<p>2023, January. Chinese verbal reduplication and the one-delimitation principle. Oral presentation at LSA’s 97th Annual Meeting. Denver, Colorado, USA. </p>
 </div>
 				
 				
