--- a/Teaching/index.html
+++ b/Teaching/index.html
@@ -19,7 +19,7 @@ title: Teaching
 	<b>2020 Fall</b><br>
 	</div>
       <div class="red">
-	Intro to Linguistic Theory (Head teaching Assistant), Rutgers University.<br>      
+	Intro to Linguistic Theory (Head Teaching Assistant), Rutgers University.<br>      
 	Syntax (Independent instructor), Rutgers University.<br>        
 	Intro to Linguistic Theory (Independent instructor; honors section), Rutgers University.<br>      
         Intro to Linguistic Theory (Independent instructor), Rutgers University.<br>
