--- a/Research by topics/index.html
+++ b/Research by topics/index.html
@@ -1,1 +1,31 @@
+---
+layout: default
+title: Teaching
+---
 
+</br>
+<h2>{{ page.title }}</h2>
+</br>
+<div class="blurb">
+	
+<head></head>
+    <body>
+      <div class="blue">
+	<b>2022 Fall</b><br>       
+	<b>2022 Summer</b><br> 
+	<b>2022 Spring</b><br>      
+	<b>2021 Fall</b><br>
+	<b>2021 Spring</b><br>
+	<b>2020 Fall</b><br>
+	</div>
+      <div class="red">
+	Intro to Linguistic Theory (Head Teaching Assistant), Rutgers University.<br>      
+	Syntax (Independent instructor), Rutgers University.<br>        
+	Intro to Linguistic Theory (Independent instructor; honors section), Rutgers University.<br>      
+        Intro to Linguistic Theory (Independent instructor), Rutgers University.<br>
+	Intro to Linguistic Theory (Independent instructor), Rutgers University.<br>
+        Intro to Linguistic Theory (Teaching Assistant), Rutgers University.<br>
+	</div>
+ <body>
+	 
+	</div>
