--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@ title: Chaoyi Chen (陈超逸)
 		</br>
 		</br>	
 		<div class="blurb">
-			<h2>Recent activities:</h2>				
-			<p>2023, January. Chinese verbal reduplication and the one-delimitation principle. Oral presentation at LSA’s 97th Annual Meeting. Denver, Colorado, USA. </p>
+			<h2>Recent activities:</h2>
+			<p>2023, April 28-30. Concessiveness and verum focus: the emergence of Mandarin concessive scalar particle hai. Oral presentation at <a href="http://chicagolinguisticsociety.org/">CLS-59</a>. the University of Chicago, Chicago. </p>
+			<p>2023, May 12-14. The object-reading preference in doubly-gapped Mandarin relatives. Oral presentation at <a href="https://sites.google.com/ntnueng.tw/teal13">TEAL-13</a>. National Taiwan Normal University, Taipei. </p>
 </div>
-				
 				
