--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@ title: Chaoyi Chen (陈超逸)
 			<h2>Hi! I am Chaoyi Chen!</h2><br>
 			<p>I’m a PhD candidate in <a href="https://ling.rutgers.edu/"> the Rutgers Department of Linguistics</a>.<br>
 			I am interested in Syntax, Semantics, and their interfaces. Language-wise, I specialize in English, Mandarin Chinese and <a href="https://en.wikipedia.org/wiki/Fuzhou_dialect">Fuzhou Chinese </a>.<br>
-		        My doctoral dissertation investigates the syntax and semantics of free relatives, co-supervised by <a href="https://sites.rutgers.edu/mark-baker/people/mark-baker/">Mark Baker</a> and <a href="https://yimeixiang.wordpress.com/">Yimei Xiang</a>.
-		</div>	
+		        My doctoral dissertation investigates the syntax and semantics of free relatives, co-supervised by <a href="https://sites.rutgers.edu/mark-baker/people/mark-baker/">Mark Baker</a> and <a href="https://yimeixiang.wordpress.com/">Yimei Xiang</a>.<br>
+			Other than free relatives, I am also interested in concessive scalar particles, verbal reduplications, limited ellipsis, null categories and reflexives.
+</div>	
 		</br>
 		</br>	
 		<div class="blurb">
 			<h2>Recent activities:</h2>
+			<p>2023, April 15. Mandarin concessive scalar particle hai: Verum focus and *Maximize Presupposition*!. Oral presentation at <a href="https://www.macsim.us/the-9th-macsim/9th-macsim-schedule/">MACSIM-9</a>. University of Pennsylvania, Philadelphia.
 			<p>2023, April 28-30. Concessiveness and verum focus: the emergence of Mandarin concessive scalar particle hai. Oral presentation at <a href="http://chicagolinguisticsociety.org/">CLS-59</a>. the University of Chicago, Chicago. </p>
 			<p>2023, May 12-14. The object-reading preference in doubly-gapped Mandarin relatives. Oral presentation at <a href="https://sites.google.com/ntnueng.tw/teal13">TEAL-13</a>. National Taiwan Normal University, Taipei. </p>
 </div>
