--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@ title: Chaoyi Chen (陈超逸)
 		</br>	
 		<div class="blurb">
 			<h2>Recent activities:</h2>
-			<p>2023, April 15. Mandarin concessive scalar particle hai: Verum focus and *Maximize Presupposition*!. Oral presentation at <a href="https://www.macsim.us/the-9th-macsim/9th-macsim-schedule/">MACSIM-9</a>. University of Pennsylvania, Philadelphia.
-			<p>2023, April 28-30. Concessiveness and verum focus: the emergence of Mandarin concessive scalar particle hai. Oral presentation at <a href="http://chicagolinguisticsociety.org/">CLS-59</a>. the University of Chicago, Chicago. </p>
+			<p>2023, April 15. Mandarin concessive scalar particle <i>hai</i>: Verum focus and <i>Maximize Presupposition</i>!. Oral presentation at <a href="https://www.macsim.us/the-9th-macsim/9th-macsim-schedule/">MACSIM-9</a>. University of Pennsylvania, Philadelphia.
+			<p>2023, April 28-30. Concessiveness and verum focus: the emergence of Mandarin concessive scalar particle <i>hai</i>. Oral presentation at <a href="http://chicagolinguisticsociety.org/">CLS-59</a>. the University of Chicago, Chicago. </p>
 			<p>2023, May 12-14. The object-reading preference in doubly-gapped Mandarin relatives. Oral presentation at <a href="https://sites.google.com/ntnueng.tw/teal13">TEAL-13</a>. National Taiwan Normal University, Taipei. </p>
 </div>
 				
