--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ title: Chaoyi Chen (陈超逸)
 		</br>	
 		<div class="blurb">
 			<h2>Recent activities:</h2>
-			<p>2023, August 17-19. The antecedent preferences for Mandarin reflexive <i>ziji</i> and <i>ta-ziji</i>!. Poster presentation at <a href="https://sites.google.com/view/icteap4/home?authuser=0">ICTEAP-4</a>.
+			<p>2023, August 17-19. The antecedent preferences for Mandarin reflexive <i>ziji</i> and <i>ta-ziji</i>. Poster presentation at <a href="https://sites.google.com/view/icteap4/home?authuser=0">ICTEAP-4</a>.
 			<p>2023, May 12-14. The object-reading preference in doubly-gapped Mandarin relatives. Oral presentation at <a href="https://sites.google.com/ntnueng.tw/teal13">TEAL-13</a>. </p>
 </div>
 				
