--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@ title: Chaoyi Chen (陈超逸)
                 </br>
 		<div class="blurb">
 			<h2>Hi! I am Chaoyi Chen!</h2><br>
-			<p>I’m a PhD candidate in <a href="https://ling.rutgers.edu/"> the Rutgers Department of Linguistics</a>.<br>
-			I am interested in Syntax, Semantics, and their interfaces. Language-wise, I specialize in English, Mandarin Chinese and <a href="https://en.wikipedia.org/wiki/Fuzhou_dialect">Fuzhou Chinese </a>.<br>
+			<p>I’m a PhD candidate in <a href="https://ling.rutgers.edu/"> the Rutgers Department of Linguistics</a>.<br> I am interested in Syntax, Semantics, and their interfaces.<br>
 		        My doctoral dissertation investigates the syntax and semantics of free relatives, co-supervised by <a href="https://sites.rutgers.edu/mark-baker/people/mark-baker/">Mark Baker</a> and <a href="https://yimeixiang.wordpress.com/">Yimei Xiang</a>.<br>
 			Other than free relatives, I am also interested in concessive scalar particles, verbal reduplications, limited ellipsis, null categories, and reflexives.
 </div>	
@@ -16,6 +15,6 @@ title: Chaoyi Chen (陈超逸)
 			<h2>Recent activities:</h2>
 			<p>2023, August 17-19. The antecedent preferences for Mandarin reflexive <i>ziji</i> and <i>ta-ziji</i>. Poster presentation at <a href="https://sites.google.com/view/icteap4/home?authuser=0">ICTEAP-4</a>. [with <a href="https://www.dorothyahn.com/">Dorothy Ahn</a>]
 			<p>2023, May 12-14. The object-reading preference in doubly-gapped Mandarin relatives. Oral presentation at <a href="https://sites.google.com/ntnueng.tw/teal13">TEAL-13</a>. </p>
-			<p>2023, May. Awared a 2023 Rutgers School of Arts and Sciences Award for Distinguished Contributions to Undergraduate Education. <a href="https://https://sas.rutgers.edu/news-a-events/news/newsroom/achievements/3586-2023-awards-for-distinguished-contributions-to-undergraduate-education#ChaoyiChen">Find more here!</a> </p>
+			<p>2023, May. I was awarded a 2023 Rutgers School of Arts and Sciences Award for Distinguished Contributions to Undergraduate Education! <a href="https://https://sas.rutgers.edu/news-a-events/news/newsroom/achievements/3586-2023-awards-for-distinguished-contributions-to-undergraduate-education#ChaoyiChen">Find more here!</a> </p>
 </div>
 				
