--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Chaoyi Chen (陈超逸)
                 </br>
 		<div class="blurb">
 			<h2>Hi! I am Chaoyi Chen!</h2><br>
-			<p>I’m a PhD candidate in <a href="https://ling.rutgers.edu/"> the Rutgers Department of Linguistics</a>. I am interested in Syntax, Semantics, and their interfaces.<br>	
+			<p>I’m a PhD candidate in <a href="https://ling.rutgers.edu/"> the Rutgers Department of Linguistics</a>. I am interested in Syntax, Semantics, and their interfaces.<br><br>
 		        My doctoral dissertation investigates the syntax and semantics of free relatives, co-supervised by <a href="https://sites.rutgers.edu/mark-baker/people/mark-baker/">Mark Baker</a> and <a href="https://yimeixiang.wordpress.com/">Yimei Xiang</a>.<br>
 			Other than free relatives, I am also interested in concessive scalar particles, verbal reduplications, limited ellipsis, null categories, and reflexives.
 </div>	
