--- a/Research by topics/index.html
+++ b/Research by topics/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Research
+title: Research by topics
 ---
 
 </br>
@@ -18,6 +18,8 @@ title: Research
 	<b>2021 Spring</b><br>
 	<b>2020 Fall</b><br>
 	</div>
+
+	    
       <div class="red">
 	Intro to Linguistic Theory (Head Teaching Assistant), Rutgers University.<br>      
 	Syntax (Independent instructor), Rutgers University.<br>        
