--- a/Research by topics/index.html
+++ b/Research by topics/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Research by topics
+title: Syntax
 ---
 
 </br>
@@ -11,7 +11,7 @@ title: Research by topics
 <head></head>
     <body>
       <div class="blue">
-	<h1>Recent activities:</h1>     
+	<b>2022 Summer</b><br>    
 	<b>2022 Summer</b><br> 
 	<b>2022 Spring</b><br>      
 	<b>2021 Fall</b><br>
