--- a/Research by topics/index.html
+++ b/Research by topics/index.html
@@ -21,6 +21,7 @@ title: Syntax
 
 	    
       <div class="red">
+	<h2>Semantics</h2>
 	Intro to Linguistic Theory (Head Teaching Assistant), Rutgers University.<br>      
 	Syntax (Independent instructor), Rutgers University.<br>        
 	Intro to Linguistic Theory (Independent instructor; honors section), Rutgers University.<br>      
