--- a/Research by topics/index.html
+++ b/Research by topics/index.html
@@ -21,6 +21,31 @@ title: Syntax
 
 	    
       <div class="red">
+	
+	Intro to Linguistic Theory (Head Teaching Assistant), Rutgers University.<br>      
+	Syntax (Independent instructor), Rutgers University.<br>        
+	Intro to Linguistic Theory (Independent instructor; honors section), Rutgers University.<br>      
+        Intro to Linguistic Theory (Independent instructor), Rutgers University.<br>
+	Intro to Linguistic Theory (Independent instructor), Rutgers University.<br>
+        Intro to Linguistic Theory (Teaching Assistant), Rutgers University.<br>
+	</div>
+ <body>
+	 
+	</div>
+
+<head></head> <h2>Semantics</h2>
+    <body>
+      <div class="blue">
+	<b>2022 Summer</b><br>    
+	<b>2022 Summer</b><br> 
+	<b>2022 Spring</b><br>      
+	<b>2021 Fall</b><br>
+	<b>2021 Spring</b><br>
+	<b>2020 Fall</b><br>
+	</div>
+
+	    
+      <div class="red">
 	<h2>Semantics</h2>
 	Intro to Linguistic Theory (Head Teaching Assistant), Rutgers University.<br>      
 	Syntax (Independent instructor), Rutgers University.<br>        
@@ -32,3 +57,7 @@ title: Syntax
  <body>
 	 
 	</div>
+
+
+
+	 
