--- a/Research by topics/index.html
+++ b/Research by topics/index.html
@@ -1,14 +1,12 @@
 ---
 layout: default
-title: Syntax
+title: Research by topics
 ---
 
-</br>
-<h2>{{ page.title }}</h2>
-</br>
+
 <div class="blurb">
 	
-<head></head>
+<head></head> <h2>Syntax</h2>
     <body>
       <div class="blue">
 	<b>2022 Summer</b><br>    
