--- a/Research by topics/index.html
+++ b/Research by topics/index.html
@@ -16,8 +16,7 @@ title: Research by topics
 	<b>2021 Spring</b><br>
 	<b>2020 Fall</b><br>
 	</div>
-
-	    
+    
       <div class="red">
 	
 	Intro to Linguistic Theory (Head Teaching Assistant), Rutgers University.<br>      
@@ -28,9 +27,12 @@ title: Research by topics
         Intro to Linguistic Theory (Teaching Assistant), Rutgers University.<br>
 	</div>
  <body>
+	 
 	</div>
-
-<head></head> <h2>Semantics</h2>
+div:not(:last-child) {
+  margin-right: 40px;
+}
+	 <head></head> <h2>Semantics</h2>
     <body>
       <div class="blue">
 	<b>2022 Summer</b><br>    
