--- a/Research by topics/index.html
+++ b/Research by topics/index.html
@@ -4,7 +4,7 @@ title: Research by topics
 ---
 
 
-<div class="blurb">
+<div>
 	
 <head></head> <h2>Syntax</h2>
     <body>
@@ -28,13 +28,9 @@ title: Research by topics
 
  <body>
 	 
-	</div>
-div:not(:last-child) {
-  margin-right: 40px;
-}
 	 <head></head> <h2>Semantics</h2>
     <body>
-      <div class="blue">
+      <div>
 	<b>2022 Summer</b><br>    
 	<b>2022 Summer</b><br> 
 	<b>2022 Spring</b><br>      
@@ -44,7 +40,7 @@ div:not(:last-child) {
 	</div>
 
 	    
-      <div class="red">
+      <div>
 	Intro to Linguistic Theory (Head Teaching Assistant), Rutgers University.<br>      
 	Syntax (Independent instructor), Rutgers University.<br>        
 	Intro to Linguistic Theory (Independent instructor; honors section), Rutgers University.<br>      
