--- a/Research by topics/index.html
+++ b/Research by topics/index.html
@@ -8,7 +8,7 @@ title: Research by topics
 	
 <head></head> <h2>Syntax</h2>
     <body>
-      <div class="blue">
+      <div class="blurb">
 	      
 <b>Object-reading preferences and crossing movements</b><br>
 
@@ -30,7 +30,7 @@ title: Research by topics
 	 
 	 <head></head> <h2>Semantics</h2>
     <body>
-      <div>
+      <div class="blurb">
 	<b>2022 Summer</b><br>    
 	<b>2022 Summer</b><br> 
 	<b>2022 Spring</b><br>      
