--- a/Research by topics/index.html
+++ b/Research by topics/index.html
@@ -31,26 +31,13 @@ title: Research by topics
 	 <head></head> <h2>Semantics</h2>
     <body>
       <div class="blurb">
-	<b>2022 Summer</b><br>    
-	<b>2022 Summer</b><br> 
-	<b>2022 Spring</b><br>      
-	<b>2021 Fall</b><br>
-	<b>2021 Spring</b><br>
-	<b>2020 Fall</b><br>
-	</div>
-
-	    
-      <div>
-	Intro to Linguistic Theory (Head Teaching Assistant), Rutgers University.<br>      
-	Syntax (Independent instructor), Rutgers University.<br>        
-	Intro to Linguistic Theory (Independent instructor; honors section), Rutgers University.<br>      
-        Intro to Linguistic Theory (Independent instructor), Rutgers University.<br>
-	Intro to Linguistic Theory (Independent instructor), Rutgers University.<br>
-        Intro to Linguistic Theory (Teaching Assistant), Rutgers University.<br>
+	<b>The concessive readings of Mandarin scalar particle hai</b><br>
+	    <b>Output:</b> Proceedings paper of CLS 59th annual meeting [slides]<br>  
+        <b>The antecedent preferences for Mandarin reflexive ziji and ta-ziji </b><br>
+	      <b>Output:</b> Poster presentation at ICTEAP [poster]<br>  
 	</div>
  <body>
 	 
-	</div>
 
 
 
