--- a/Research by topics/index.html
+++ b/Research by topics/index.html
@@ -37,7 +37,11 @@ title: Research by topics
 	      
         <b>The antecedent preferences for Mandarin reflexive ziji and ta-ziji </b><br>
 	      
-	      <b>Output:</b> Poster presentation at ICTEAP [poster]<br>  
+	      <b>Output:</b> Poster presentation at ICTEAP-4 [poster]<br>  
+
+	     <b> Two Effects of the Utterance-final Particle hao-bu-hao in Mandarin Chinese.</b><br>
+
+	      <b>Output:</b> Oral presentation at NACCL-32 [please email me for slides]<br>  
 	</div>
  <body>
 	 
