--- a/Research by topics/index.html
+++ b/Research by topics/index.html
@@ -11,7 +11,11 @@ title: Research by topics
       <div class="blurb">
 	      
 <b>The object-reading preference in Mandarin free relatives</b><br>
-
+This paper explores the interactions between null subjects and null objects within one clause. In
+particular, it is observed in doubly-gapped Mandarin relatives that an object reading is preferred
+over a subject reading. Showing both null subjects and null objects undergo movements, I argue
+that this preference for object readings over subject readings is attributed to the general preference
+for nested movements over crossing movements.
 <b>Output:</b> Oral presentation TEAL-13 [slides]<br>
 <br/><br/>
 
