--- a/Research by topics/index.html
+++ b/Research by topics/index.html
@@ -10,7 +10,7 @@ title: Research by topics
     <body>
       <div class="blurb">
 	<br/><br/>    
-<b>The object-reading preference in Mandarin free relatives</b><br>
+<b>The object-reading preference in doubly-gapped Mandarin relatives</b><br>
 This paper explores the interactions between null subjects and null objects within one clause. In
 particular, it is observed in doubly-gapped Mandarin relatives that an object reading is preferred
 over a subject reading. Showing both null subjects and null objects undergo movements, I argue
