--- a/Research by topics/index.html
+++ b/Research by topics/index.html
@@ -9,13 +9,13 @@ title: Research by topics
 <head></head> <h2>Syntax</h2>
     <body>
       <div class="blurb">
-	<br/><br/>    
+	<br/>    
 <b>The object-reading preference in doubly-gapped Mandarin relatives</b><br>
 This paper explores the interactions between null subjects and null objects within one clause. In
 particular, it is observed in doubly-gapped Mandarin relatives that an object reading is preferred
 over a subject reading. Showing both null subjects and null objects undergo movements, I argue
 that this preference for object readings over subject readings is attributed to the general preference
-for nested movements over crossing movements.
+for nested movements over crossing movements.<br>
 <b>Output:</b> Oral presentation TEAL-13 [slides]<br>
 <br/>
 
