--- a/Research by topics/index.html
+++ b/Research by topics/index.html
@@ -21,7 +21,7 @@ for nested movements over crossing movements.<br>
 
 	      
 <b>Reduplication and the one-delimitation principle</b><br>
-
+This paper argues that the incompatibility between Mandarin verbal reduplications and several post-verbal result-denoting elements is one of the cases to which the one-delimitation principle applies. The discussion of Mandarin verbal reduplication contributes to our understanding of the one-delimitation principle by showing that (i) the one-delimitation principle not only applies to resultatives but also other result-denoting elements; (ii) vP is the domain for the one-delimitation principle.
 <b>Output:</b> Proceedings paper of LSA 97th annual meeting [paper]<br>
 <br/><br/>
 
