--- a/Research by topics/index.html
+++ b/Research by topics/index.html
@@ -21,12 +21,15 @@ for nested movements over crossing movements.<br>
 
 	      
 <b>Reduplication and the one-delimitation principle</b><br>
-This paper argues that the incompatibility between Mandarin verbal reduplications and several post-verbal result-denoting elements is one of the cases to which the one-delimitation principle applies. The discussion of Mandarin verbal reduplication contributes to our understanding of the one-delimitation principle by showing that (i) the one-delimitation principle not only applies to resultatives but also other result-denoting elements; (ii) vP is the domain for the one-delimitation principle.
+This paper argues that the incompatibility between Mandarin verbal reduplications and several post-verbal result-denoting elements is one of the cases to which the one-delimitation principle applies. 
+The discussion of Mandarin verbal reduplication contributes to our understanding of the one-delimitation principle by showing that (i) the one-delimitation principle not only applies to resultatives but also other result-denoting elements; (ii) vP is the domain for the one-delimitation principle.<br>
 <b>Output:</b> Proceedings paper of LSA 97th annual meeting [paper]<br>
-<br/><br/>
+<br/>
 
 
 <b>limited ellipsis and presupposition</b><br>
+This study examines the non-verbal wh-question (NVWQ) in Mandarin as a case of the limited ellipsis of the existence predicate V_{BE}, and argues the D-linked presupposition of what-N phrases in NVWQ
+could function similarly as an “appropriate discourse context” to license the ellipsis of the existence predicate  V_{BE}.
 
 <b>Output:</b> Proceedings paper of CLS 56th annual meeting [slides]<br>
 
