--- a/Research by topics/index.html
+++ b/Research by topics/index.html
@@ -42,7 +42,10 @@ could function similarly as an “appropriate discourse context” to license th
     <body>
       <div class="blurb">
 	<b>The concessive readings of Mandarin scalar particle hai</b><br>
-	      
+	      Mandarin concessive hai is observed to always co-occurs
+with shi. I propose that Mandarin concessive hai presupposes a public biased opinion favoring the negative alternative
+to the proposition to which hai is attached, which consequently triggers
+the presence of the verum focus marker shi.<br>
 	    <b>Output:</b> Proceedings paper of CLS 59th annual meeting [slides]<br>  
 	      
         <b>The antecedent preferences for Mandarin reflexive ziji and ta-ziji </b><br>
