--- a/Research by topics/index.html
+++ b/Research by topics/index.html
@@ -41,16 +41,19 @@ could function similarly as an “appropriate discourse context” to license th
 	 <head></head> <h2>Semantics</h2>
     <body>
       <div class="blurb">
+	      <br/>
 	<b>The concessive readings of Mandarin scalar particle hai</b><br>
-	      Mandarin concessive hai is observed to always co-occurs
-with shi. I propose that Mandarin concessive hai presupposes a public biased opinion favoring the negative alternative
+	      Mandarin concessive hai is observed to always co-occur
+with shi. I propose that Mandarin concessive hai presupposes a public-biased opinion favoring the negative alternative
 to the proposition to which hai is attached, which consequently triggers
 the presence of the verum focus marker shi.<br>
 	    <b>Output:</b> Proceedings paper of CLS 59th annual meeting [slides]<br>  
-	      
-        <b>The antecedent preferences for Mandarin reflexive ziji and ta-ziji </b><br>
-	      
+	      <br/>
+
+        <b>The antecedent preferences for Mandarin reflexive ziji and ta-ziji [joint work with Dorothy Ahn] </b><br>
+	      We conducted forced-choice and naturalness-judgment experiments to test whether ziji and ta-ziji differ in antecedent preferences when two possible antecedents are present and differ in relative saliency.
 	      <b>Output:</b> Poster presentation at ICTEAP-4 [poster]<br>  
+<br/>
 
 	     <b> Two Effects of the Utterance-final Particle hao-bu-hao in Mandarin Chinese.</b><br>
 
