--- a/Research by topics/index.html
+++ b/Research by topics/index.html
@@ -32,7 +32,7 @@ This study examines the non-verbal wh-question (NVWQ) in Mandarin as a case of t
 could function similarly as an “appropriate discourse context” to license the ellipsis of the existence predicate  V_{BE}.<br>
 
 <b>Output:</b> Proceedings paper of CLS 56th annual meeting [slides]<br>
-
+<br/>
 	</div>
     
 
@@ -50,7 +50,7 @@ the presence of the verum focus marker shi.<br>
 	    <b>Output:</b> Proceedings paper of CLS 59th annual meeting [slides]<br>  
 	      <br/>
 
-        <b>The antecedent preferences for Mandarin reflexive ziji and ta-ziji [joint work with Dorothy Ahn] </b><br>
+        <b>The antecedent preferences for Mandarin reflexive *ziji* and *ta-ziji* [joint work with Dorothy Ahn] </b><br>
 	      We conducted forced-choice and naturalness-judgment experiments to test whether ziji and ta-ziji differ in antecedent preferences when two possible antecedents are present and differ in relative saliency.<br>
 	      <b>Output:</b> Poster presentation at ICTEAP-4 [poster]<br>  
 <br/>
