--- a/Research by topics/index.html
+++ b/Research by topics/index.html
@@ -50,14 +50,13 @@ the presence of the verum focus marker shi.<br>
 	    <b>Output:</b> Proceedings paper of CLS 59th annual meeting [slides]<br>  
 	      <br/>
 
-        <b>The antecedent preferences for Mandarin reflexive *ziji* and *ta-ziji* [joint work with Dorothy Ahn] </b><br>
-	      We conducted forced-choice and naturalness-judgment experiments to test whether ziji and ta-ziji differ in antecedent preferences when two possible antecedents are present and differ in relative saliency.<br>
+        <b>The antecedent preferences for Mandarin reflexive <i>ziji</i> and <i>ta-ziji</i> [joint work with Dorothy Ahn] </b><br>
+	      We conducted forced-choice and naturalness-judgment experiments to test whether <i>ziji</i> and <i>ta-ziji</i>  differ in antecedent preferences when two possible antecedents are present and differ in relative saliency.<br>
 	      <b>Output:</b> Poster presentation at ICTEAP-4 [poster]<br>  
 <br/>
 
-	     <b> Two Effects of the Utterance-final Particle hao-bu-hao in Mandarin Chinese.</b><br>
-The utterance-final particle hao-bu-hao ‘good-not-good’ in Mandarin Chinese
-has two effects: requesting and emphasizing the mutually known fact. I provide an account of these two effects with the focus on their commonalities and
+	     <b> Two Effects of the Utterance-final Particle <i>hao-bu-hao</i> in Mandarin Chinese.</b><br>
+The utterance-final particle <i>hao-bu-hao</i>   ‘good-not-good’ in Mandarin Chinese has two effects: requesting and emphasizing the mutually known fact. I provide an account of these two effects with the focus on their commonalities and
 dissimilarities, accounting for why one single particle can derive two different effects.<br> 
 	      <b>Output:</b> Oral presentation at NACCL-32 [please email me for slides]<br>  
 	</div>
