--- a/Research by topics/index.html
+++ b/Research by topics/index.html
@@ -11,8 +11,7 @@ title: Research by topics
       <div class="blurb">
 	<br/>    
 <b>The object-reading preference in doubly-gapped Mandarin relatives</b><br>
-This project explores the interactions between null subjects and null objects within one clause. In
-particular, it is observed in doubly-gapped Mandarin relatives that an object reading is preferred
+It is observed in doubly-gapped Mandarin relatives that an object reading is preferred
 over a subject reading. Showing both null subjects and null objects undergo movements, I argue
 that this preference for object readings over subject readings is attributed to the general preference
 for nested movements over crossing movements.<br>
