--- a/Research by topics/index.html
+++ b/Research by topics/index.html
@@ -15,7 +15,7 @@ It is observed in doubly-gapped Mandarin relatives that an object reading is pre
 over a subject reading. Showing both null subjects and null objects undergo movements, I argue
 that this preference for object readings over subject readings is attributed to the general preference
 for nested movements over crossing movements.<br>
-<b>Output:</b> Oral presentation TEAL-13 [slides]<br>
+<b>Output:</b> Oral presentation at TEAL-13 [slides]<br>
 <br/>
 
 	      
